--- a/index.html
+++ b/index.html
@@ -9,75 +9,72 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Ludo Mania</title>
-
 </head>
-<body>
-    
+<body>     
     <div class="container-fluid">
 
         <div id="players">
             <div>
-                <span class="settings">G</span>
-                <span class="exit">E</span>
+                <span class="settings"><i class="fa fa-cogs" aria-hidden="true"></i></span>
+                <span class="exit"><i class="fa fa-undo" aria-hidden="true"></i></span>
                 <div id="startgame"><button class="initbtn pt-2" >PLAY</button></div>
             </div>
             <div class="vertical-align text-justify-center">
                 <div class="row">
-                    <div class="col-12 pt-3">
+                    <div class="col-12 pt-1">
                         <h1>Select players</h1>
                     </div>
                 </div>
                 <div class="row mx-0 justify-content-center">
-                    <div class="col-6 p-2">
+                    <div class="col-6 p-1 pointer">
                         <h2 id="myCheck">2</h2>    
                     </div>
-                    <div class="col-6 p-2">
+                    <div class="col-6 p-1 pointer">
                         <h2 id="myChecktwo">4</h2> 
                     </div>
                 </div>
-                <div class="row text-center">
+                <div class="row text-center pointer">
                     <span class="col-4 ml-2 g">Blue</span>
                     <span id="bluehuman" class="col-3">Human</span>
                     <span id="bluebot" class="col-2">Bot</span>  
                 </div>
-                <div class="row text-center fourplayers">
+                <div class="row text-center fourplayers pointer">
                     <span class="col-4 ml-2 a">Yellow</span>
                     <span id="yellowhuman" class="col-3">Human</span>
                     <span id="yellowbot" class="col-2">Bot</span>  
                 </div>
-                <div class="row text-center">
+                <div class="row text-center pointer">
                     <span class="col-4 ml-2 m">Red</span>
                     <span id="redhuman" class="col-3">Human</span>
                     <span id="redbot" class="col-2">Bot</span>  
                 </div>
-                <div class="row text-center fourplayers">
+                <div class="row text-center fourplayers pointer">
                     <span class="col-4 ml-2 e">Green</span>
                     <span id="greenhuman" class="col-3">Human</span>
                     <span id="greenbot" class="col-2">Bot</span>  
                 </div>
             </div>
+            <div id="rules"><button class="initbtn">Game Rules</button></div>
         </div>
 
         <div id="start">
-            <span class="settings">G</span>
-            <span class="exit">E</span>
-            <div class="logo pt-3">
-                <h2>
+            <span class="settings"><i class="fa fa-cogs" aria-hidden="true"></i></span>
+            <div class="logo mt-2 pt-5 pb-4">
+                <h1>
                     <span class="e">L</span>
                     <span class="m">U</span>
                     <span class="g">D</span>
                     <span class="a">O</span>
-                </h2>
-                <h2>
+                </h1>
+                <h1>
                     <span class="g">G</span>
                     <span class="a">A</span>
                     <span class="m">M</span>
                     <span class="e">E</span>
-                </h2>
+                </h1>
             </div>
             <div>
                 <div id="play"><button class="initbtn" >PLAY</button></div>
-                <div id="rules"><button class="initbtn">Game Rules</button></div>
             </div>
         </div>
 
