dice styled, added condition for doubledice, added rolling effect with dice fonts, other styling

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
     <link rel="shortcut icon" href="assets/audio">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/c5cdd100a3.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Ludo Mania</title>
 </head>
 <body>
-    <div class="mainlayer"></div>     
+    <div class="mainlayer"></div>  
     <div class="container-fluid">
 
         <div id="players">
@@ -400,31 +400,39 @@
 
             <div id="bluedice">
                 <div id="bluediceone">
+                    <i class="fas fa-dice-six dice"></i>
                 </div>
                 <div id="bluedicetwo">
+                    <i class="fas fa-dice-six dice"></i>
                 </div>
             </div>
             <div id="yellowdice">
                 <div id="yellowdiceone">
+                    <i class="fas fa-dice-six dice"></i>
                 </div>
                 <div id="yellowdicetwo">
+                    <i class="fas fa-dice-six dice"></i>
                 </div>
             </div>
             <div id="reddice">
                 <div id="reddiceone">
+                    <i class="fas fa-dice-six dice"></i>
                 </div>
                 <div id="reddicetwo">
+                    <i class="fas fa-dice-six dice"></i>
                 </div>
             </div>
             <div id="greendice">
                 <div id="greendiceone">
+                    <i class="fas fa-dice-six dice"></i>
                 </div>
                 <div id="greendicetwo">
+                    <i class="fas fa-dice-six dice"></i>
                 </div>
             </div>
             <div id="dicewrapper">
-                <div id="dicemoveone" class="text-center">12</div>
-                <div id="dicemovetwo" class="text-center">1</div>
+                <div id="dicemoveone" class="text-center">6</div>
+                <div id="dicemovetwo" class="text-center">6</div>
             </div>
         </div>
 
