--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="assets/audio">
     <script src="https://kit.fontawesome.com/c5cdd100a3.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <title>Ludo Mania</title>
+    <title>Ludo Game</title>
 </head>
 
 <body>
