Refactor dice listener and double dice rule

--- a/index.html
+++ b/index.html
@@ -405,35 +405,35 @@
             </div>
 
 			<!-- Players' dice -->
-            <div id="bluedice">
-                <div id="bluediceone">
+            <div id="dice0">
+                <div id="diceone0">
                     <i class="fas fa-dice-six dice"></i>
                 </div>
-                <div id="bluedicetwo">
-                    <i class="fas fa-dice-six dice"></i>
-                </div>
-            </div>
-            <div id="yellowdice">
-                <div id="yellowdiceone">
-                    <i class="fas fa-dice-six dice"></i>
-                </div>
-                <div id="yellowdicetwo">
+                <div id="dicetwo0">
                     <i class="fas fa-dice-six dice"></i>
                 </div>
             </div>
-            <div id="reddice">
-                <div id="reddiceone">
+            <div id="dice1">
+                <div id="diceone1">
                     <i class="fas fa-dice-six dice"></i>
                 </div>
-                <div id="reddicetwo">
+                <div id="dicetwo1">
                     <i class="fas fa-dice-six dice"></i>
                 </div>
             </div>
-            <div id="greendice">
-                <div id="greendiceone">
+            <div id="dice2">
+                <div id="diceone2">
                     <i class="fas fa-dice-six dice"></i>
                 </div>
-                <div id="greendicetwo">
+                <div id="dicetwo2">
+                    <i class="fas fa-dice-six dice"></i>
+                </div>
+            </div>
+            <div id="dice3">
+                <div id="diceone3">
+                    <i class="fas fa-dice-six dice"></i>
+                </div>
+                <div id="dicetwo3">
                     <i class="fas fa-dice-six dice"></i>
                 </div>
             </div>
