Add animation to tokens' movement. Fix looping and blocked positions

--- a/index.html
+++ b/index.html
@@ -108,25 +108,25 @@
         <div class="board" >
         
 			<div id="layer" class="text-center"></div> 
-			<div id="blueTokenOne"><div class="tokenwrapperblue"><div class="tokenblue"></div></div></div>
-			<div id="blueTokenTwo"><div class="tokenwrapperblue"><div class="tokenblue"></div></div></div>
-			<div id="blueTokenThree"><div class="tokenwrapperblue"><div class="tokenblue"></div></div></div>
-			<div id="blueTokenFour"><div class="tokenwrapperblue"><div class="tokenblue"></div></div></div>
+			<div id="one0"><div class="tokenwrapperblue"><div class="tokenblue innerToken"></div></div></div>
+			<div id="two0"><div class="tokenwrapperblue"><div class="tokenblu innerToken"></div></div></div>
+			<div id="three0"><div class="tokenwrapperblue"><div class="tokenblue innerToken"></div></div></div>
+			<div id="four0"><div class="tokenwrapperblue"><div class="tokenblue innerToken"></div></div></div>
 
-			<div id="yellowTokenOne"><div class="tokenwrapperyellow"><div class="tokenyellow"></div></div></div>
-			<div id="yellowTokenTwo"><div class="tokenwrapperyellow"><div class="tokenyellow"></div></div></div>
-			<div id="yellowTokenThree"><div class="tokenwrapperyellow"><div class="tokenyellow"></div></div></div>
-			<div id="yellowTokenFour"><div class="tokenwrapperyellow"><div class="tokenyellow"></div></div></div>
+			<div id="one1"><div class="tokenwrapperyellow"><div class="tokenyellow innerToken"></div></div></div>
+			<div id="two1"><div class="tokenwrapperyellow"><div class="tokenyellow innerToken"></div></div></div>
+			<div id="three1"><div class="tokenwrapperyellow"><div class="tokenyellow innerToken"></div></div></div>
+			<div id="four1"><div class="tokenwrapperyellow"><div class="tokenyellow innerToken"></div></div></div>
 
-			<div id="redTokenOne"><div class="tokenwrapperred"><div class="tokenred"></div></div></div>
-			<div id="redTokenTwo"><div class="tokenwrapperred"><div class="tokenred"></div></div></div>
-			<div id="redTokenThree"><div class="tokenwrapperred"><div class="tokenred"></div></div></div>
-			<div id="redTokenFour"><div class="tokenwrapperred"><div class="tokenred"></div></div></div>
+			<div id="one2"><div class="tokenwrapperred"><div class="tokenred innerToken"></div></div></div>
+			<div id="two2"><div class="tokenwrapperred"><div class="tokenred innerToken"></div></div></div>
+			<div id="three2"><div class="tokenwrapperred"><div class="tokenred innerToken"></div></div></div>
+			<div id="four2"><div class="tokenwrapperred"><div class="tokenred innerToken"></div></div></div>
 
-			<div id="greenTokenOne"><div class="tokenwrappergreen"><div class="tokengreen"></div></div></div>
-			<div id="greenTokenTwo"><div class="tokenwrappergreen"><div class="tokengreen"></div></div></div>
-			<div id="greenTokenThree"><div class="tokenwrappergreen"><div class="tokengreen"></div></div></div>
-			<div id="greenTokenFour"><div class="tokenwrappergreen"><div class="tokengreen"></div></div></div>
+			<div id="one3"><div class="tokenwrappergreen"><div class="tokengreen innerToken"></div></div></div>
+			<div id="two3"><div class="tokenwrappergreen"><div class="tokengreen innerToken"></div></div></div>
+			<div id="three3"><div class="tokenwrappergreen"><div class="tokengreen innerToken"></div></div></div>
+			<div id="four3"><div class="tokenwrappergreen"><div class="tokengreen innerToken"></div></div></div>
 
 			<!-- Board Grid-->
 			<div class="row hline p-0 m-0">
