Add function to activate and show dice options for each token before moving when tokens are clicked on

--- a/index.html
+++ b/index.html
@@ -108,25 +108,25 @@
         <div class="board" >
         
 			<div id="layer" class="text-center"></div> 
-			<div id="one0"><div class="tokenwrapperblue"><div class="tokenblue innerToken"></div></div></div>
-			<div id="two0"><div class="tokenwrapperblue"><div class="tokenblu innerToken"></div></div></div>
-			<div id="three0"><div class="tokenwrapperblue"><div class="tokenblue innerToken"></div></div></div>
-			<div id="four0"><div class="tokenwrapperblue"><div class="tokenblue innerToken"></div></div></div>
+			<div id="one0"><div class="tokenwrapper0"><div class="tokenblue innerToken"></div></div></div>
+			<div id="two0"><div class="tokenwrapper0"><div class="tokenblue innerToken"></div></div></div>
+			<div id="three0"><div class="tokenwrapper0"><div class="tokenblue innerToken"></div></div></div>
+			<div id="four0"><div class="tokenwrapper0"><div class="tokenblue innerToken"></div></div></div>
 
-			<div id="one1"><div class="tokenwrapperyellow"><div class="tokenyellow innerToken"></div></div></div>
-			<div id="two1"><div class="tokenwrapperyellow"><div class="tokenyellow innerToken"></div></div></div>
-			<div id="three1"><div class="tokenwrapperyellow"><div class="tokenyellow innerToken"></div></div></div>
-			<div id="four1"><div class="tokenwrapperyellow"><div class="tokenyellow innerToken"></div></div></div>
+			<div id="one1"><div class="tokenwrapper1"><div class="tokenyellow innerToken"></div></div></div>
+			<div id="two1"><div class="tokenwrapper1"><div class="tokenyellow innerToken"></div></div></div>
+			<div id="three1"><div class="tokenwrapper1"><div class="tokenyellow innerToken"></div></div></div>
+			<div id="four1"><div class="tokenwrapper1"><div class="tokenyellow innerToken"></div></div></div>
 
-			<div id="one2"><div class="tokenwrapperred"><div class="tokenred innerToken"></div></div></div>
-			<div id="two2"><div class="tokenwrapperred"><div class="tokenred innerToken"></div></div></div>
-			<div id="three2"><div class="tokenwrapperred"><div class="tokenred innerToken"></div></div></div>
-			<div id="four2"><div class="tokenwrapperred"><div class="tokenred innerToken"></div></div></div>
+			<div id="one2"><div class="tokenwrapper2"><div class="tokenred innerToken"></div></div></div>
+			<div id="two2"><div class="tokenwrapper2"><div class="tokenred innerToken"></div></div></div>
+			<div id="three2"><div class="tokenwrapper2"><div class="tokenred innerToken"></div></div></div>
+			<div id="four2"><div class="tokenwrapper2"><div class="tokenred innerToken"></div></div></div>
 
-			<div id="one3"><div class="tokenwrappergreen"><div class="tokengreen innerToken"></div></div></div>
-			<div id="two3"><div class="tokenwrappergreen"><div class="tokengreen innerToken"></div></div></div>
-			<div id="three3"><div class="tokenwrappergreen"><div class="tokengreen innerToken"></div></div></div>
-			<div id="four3"><div class="tokenwrappergreen"><div class="tokengreen innerToken"></div></div></div>
+			<div id="one3"><div class="tokenwrapper3"><div class="tokengreen innerToken"></div></div></div>
+			<div id="two3"><div class="tokenwrapper3"><div class="tokengreen innerToken"></div></div></div>
+			<div id="three3"><div class="tokenwrapper3"><div class="tokengreen innerToken"></div></div></div>
+			<div id="four3"><div class="tokenwrapper3"><div class="tokengreen innerToken"></div></div></div>
 
 			<!-- Board Grid-->
 			<div class="row hline p-0 m-0">
